cabal-version:      3.0
name:               Parkour
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         gan_shen@icloud.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   src
    exposed-modules:
        Control.Concurrent.Async.Lifted
        Control.CSD.Network
        Control.CSD.CSD
    build-depends:
        async                ^>= 2.2.5,
        base                 ^>= 4.17.2.1,
        http-client          ^>= 0.7.15,
        mtl                  ^>= 2.2.2,
        servant              ^>= 0.19.1,
        servant-client       ^>= 0.19,
        servant-server       ^>= 0.19.2,
        transformers         ^>= 0.5.6.2,
        unordered-containers ^>= 0.2.19.1,
        warp                 ^>= 3.3.25,

executable Parkour-test
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        Parkour
