cabal-version:      3.0
name:               Parkour
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         gan_shen@icloud.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:
        src
        v2
    exposed-modules:
        Control.Concurrent.Async.Lifted
        Control.CSD.Network
        Control.CSD.CSD
        SepArrow
    build-depends:
      async >= 2.2.5 && < 2.3,
      base >= 4.18.3 && < 4.19,
      mtl >= 2.3.1 && < 2.4,
      transformers >= 0.6.1 && < 0.7,
      http-client >= 0.7.19 && < 0.8,
      time >= 1.12.2 && < 1.13,
      servant >= 0.20.3 && < 0.21,
      unordered-containers >= 0.2.20 && < 0.3,
      servant-client >= 0.20.3 && < 0.21,
      servant-server >= 0.20.3 && < 0.21,
      warp >= 3.4.8 && < 3.5,
      singletons ^>= 3.0.4,
      singletons-base ^>= 3.2,

executable Parkour-test
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        time,
        Parkour,
